# morphiq-lume

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  install.sh  rustfmt.toml  start.sh
.cargo/: config.toml
.helix/: config.toml
assets/: MILESTONE.md  SYSTEM-REQUIREMENTS.md
assets/fonts/icons/: config.json  demo.html
assets/fonts/icons/css/: icons-codes.css  icons-embedded.css  icons-ie7-codes.css  icons-ie7.css  icons.css
assets/fonts/icons/font/: icons.afm  icons.eot
assets/packaging/linux/: morphiq-lume.desktop
assets/packaging/linux/appimage/: AppRun
assets/packaging/macos/: Info.plist
assets/packaging/windows/: setup.wxs
assets/themes/: cupcake.toml  dark.toml  dim.toml  dracula.toml  forest.toml  garden.toml  halloween.toml  light.toml  luxuty.toml  wireframe.toml
assets/thesis/: Requirement Doc.txt  Technical Requirements.txt
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json
frontend/.cargo/: config.toml
frontend/assets/thesis/: Technical Requirements.txt
frontend/css/: tailwind.css
frontend/src/: error_page.rs  images.rs  lib.rs  main.rs
frontend/src/components/: counter_btn.rs  header.rs  mod.rs  sidebar.rs
frontend/src/configs/: mod.rs
frontend/src/countries/: flags_pictures.rs  mod.rs
frontend/src/gui/: morphiq.rs
frontend/src/gui/components/: header.rs  mod.rs  sidebar.rs
frontend/src/gui/components/cards/: mod.rs
frontend/src/gui/components/tables/: mod.rs
frontend/src/gui/pages/: login.rs
frontend/src/gui/pages/home/: dashboard.rs  employee.rs  mod.rs
frontend/src/gui/pages/home/panes/: mod.rs
frontend/src/gui/pages/home/settings/: view_all.rs
frontend/src/gui/styles/: container.rs  donut.rs  mod.rs  scrollbar.rs  svg.rs  table.rs  text_input.rs
frontend/src/gui/styles/style_constant/: fonts.rs
frontend/src/gui/styles/themes/: light.rs
frontend/src/gui/styles/types/: palette.rs
frontend/src/layouts/: main_layout.rs
frontend/src/pages/: home.rs  login.rs
frontend/src/translations/: translate.rs
frontend/src/translations/types/: language.rs
frontend/src/utils/: error_logger.rs
frontend/src/utils/types/: icon.rs
libs/lib-auth/: Cargo.toml
libs/lib-utils/: Cargo.toml
migrations/: 20251024065119_up.sql  20251024065313_seed.sql
proto/: hello.proto
server/: Cargo.toml  build.rs
server/output/: hello.rs
server/src/: main.rs  server.rs
server/src/service/: hello.rs
shared/auth/: Cargo.toml
shared/auth/src/: config.rs
shared/auth/src/pwd/: error.rs  mod.rs
shared/auth/src/pwd/scheme/: scheme_01.rs  scheme_02.rs
shared/auth/src/token/: mod.rs
shared/error/: Cargo.toml
shared/error/src/: lib.rs
shared/utils/: Cargo.toml
shared/utils/src/: time.rs
src/: app.rs  error.rs  images.rs  main.rs  morphiq.rs  router.rs
src/chart/: mod.rs
src/chart/types/: bar_chart.rs  donut_chart.rs  mod.rs
src/configs/: config.rs  config_settings.rs  config_window.rs  configs.rs  mod.rs
src/core/: mod.rs
src/core/theme/: dark.rs  fonts.rs  mod.rs
src/core/utils/: message.rs  mod.rs
src/core/utils/configs/: config.rs  config_settings.rs  config_window.rs
src/core/utils/constants/: widgets.rs
src/core/utils/filters/: mod.rs
src/core/utils/messages/: auth.rs  dashboard.rs  employee.rs  header.rs  home.rs  mod.rs
src/core/utils/messages/chart/: bar.rs  mod.rs
src/countries/: flags_pictures.rs
src/countries/types/: country.rs  mod.rs  nationalities.rs
src/crates/: config.rs  mod.rs
src/crates/auth/: config.rs  mod.rs
src/crates/auth/pwd/: mod.rs
src/crates/auth/pwd/scheme/: mod.rs
src/crates/crate_auth/: config.rs
src/crates/crate_auth/pwd/: error.rs  mod.rs
src/crates/crate_auth/pwd/scheme/: scheme_01.rs  scheme_02.rs
src/crates/crate_core/: mod.rs
src/crates/crate_core/model/store/: mod.rs
src/crates/crate_utils/: envs.rs  mod.rs  time.rs
src/crates/model/store/: mod.rs
src/crates/utils/: b32.rs  b64.rs
src/data/models/: category_model.rs
src/features/: contentview.rs  home.rs  mod.rs
src/features/attendance/: view.rs
src/features/auth/: auth_msg.rs  login.rs  mod.rs
src/features/dashboard/: dashboard_msg.rs  mod.rs  view.rs
src/features/documents/: view.rs
src/features/employees/: addition_fields.rs  create.rs  employee_msg.rs  mod.rs  view.rs
src/features/leaves/: view.rs
src/features/payroll/: view.rs
src/features/settings/: edit_profile.rs  mod.rs  view.rs
src/features/tables/dashboard/: mod.rs
src/features/tables/employee/: employee.rs  mod.rs
src/gui/: mod.rs  morphiq.rs
src/gui/components/: header.rs  loading.rs  mod.rs  sidebar.rs
src/gui/components/cards/: dashboard_card.rs
src/gui/pages/: login.rs  mod.rs
src/gui/pages/home/: attendance.rs  dashboard.rs  documents.rs  edit_profile.rs  employee.rs  leaves.rs  mod.rs  payroll.rs  settings.rs
src/gui/pages/home/dashboard/: mod.rs
src/gui/pages/home/employee/: create.rs  create_msg.rs  mod.rs
src/gui/styles/: bar.rs  button.rs  container.rs  context_menu.rs  datepicker.rs  donut.rs  menu.rs  mod.rs  rule.rs  scrollbar.rs  slider.rs  style_constant.rs  svg.rs  text.rs  text_input.rs
src/gui/styles/custom_themes/: autumn.rs  black.rs  business.rs  corporate.rs  mod.rs  retro.rs  synthwave.rs
src/gui/styles/style_constant/: colors.rs  fonts.rs  mod.rs
src/gui/styles/themes/: dark.rs  light.rs  mod.rs
src/gui/styles/types/: custom_palette.rs  gradient_type.rs  mod.rs  palette.rs  palette_extension.rs  style_type.rs
src/gui/types/: message.rs  mod.rs  tables.rs
src/styles/: button.rs  color_remote.rs  container.rs  datepicker.rs  donut.rs  menu.rs  mod.rs  palette.rs  pick_list.rs  rule.rs  scrollable.rs  style_type.rs  table.rs  text.rs
src/translations/: mod.rs  translate.rs
src/translations/types/: language.rs
src/utils/: error_logger.rs  mod.rs
src/utils/types/: blood_type.rs  gender.rs  icon.rs  marital_status.rs  mod.rs
src/widgets/: bar_chart.rs  dashboard_card.rs  donut_chart.rs  header.rs  loading.rs  mod.rs  modal.rs  sidebar.rs
tools/gen-key/: Cargo.toml
tools/gen-key/src/: main.rs
(+24 files in other folders)
