[workspace]
members = ["frontend", "shared/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Descartin Lance Phillip <cnale1211435@gmail.com>"]
description = "Transforming Human Resource Operations with Clarity, Precision, and Intelligence"
homepage = "https://morphiqlume.com"
documentation = "https://github.com/icarusvagner/morhpiq-lume/wiki"
readme = "README.md"
keywords = [
    "gui",
    "hrmo",
    "desktop",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/icarusvagner/morhpiq-lume"
edition = "2024"
include = [
    "/src/**/*.rs",
    "/assets/fonts/Raleway/*.ttf",
    "/assets/fonts/Orbitron/*.ttf",
    "/assets/logos/icons/full/icon.png",
    "/assets/logos/icons/raw/icon.png",
    "/assets/fonts/icons/font/*.ttf",
]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = 5 }
unused = { level = "allow", priority = 5 }
dead_code = { level = "allow", priority = 5 }

[workspace.lints.clippy]
all = { level = "warn", priority = 5 }
# cargo = { level = "warn", priority = 5 }
pedantic = { level = "warn", priority = 5 }
nursery = { level = "warn", priority = 5 }
# restriction = { level = "warn", priority = 5 }
unwrap_used = { level = "forbid", priority = 5 }
empty_structs_with_brackets = { level = "allow", priority = 5 }
pub_use = { level = "allow", priority = 5 }
missing_errors_doc = { level = "allow", priority = 5 }
multiple_crate_versions = { level = "allow", priority = 5 }
must_use_candidate = { level = "allow", priority = 5 }
needless_pass_by_value = { level = "allow", priority = 5 }
module_name_repetitions = { level = "allow", priority = 5 }
future_not_send = { level = "allow", priority = 5 }
redundant_closure_for_method_calls = { level = "allow", priority = 5 }
unused_async = { level = "allow", priority = 5 }                       # Only here until IndexedDB refactor

#================================================================================
# Release Profile Optimization and Dev
#================================================================================
[profile.release]
opt-level = 3 # Maximum optimizations for speed
lto = true    # Enable Link Time Optimization
strip = true  # Remove debug symbols for smaller binary

[profile.dev]
opt-level = 0
codegen-units = 256
lto = "off"
incremental = true
debug = false       # Enable if debugging is necessary.

[workspace.dependencies]
# --- Shared libs
lume-error = { path = "./shared/error" }

chrono = "0.4.42"
clone-macro = "0.1.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
csv = "1.3.1"
futures = "0.3.31"
html-escape = "0.2.13"
humantime = "2.3.0"
isocountry = "0.3.2"
leptos = { version = "0.8.9", features = ["csr", "nightly"] }
leptos_meta = "0.8.5"
leptos_router = { version = "0.8.7", features = ["nightly"] }
log = "0.4.28"
num-format = "0.4.4"
reqwasm = "0.5.0"
ron = "0.11.0"
rust-i18n = "3.1.5"
serde = { version = "1.0.226", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
strum_macros = "0.27.2"
thiserror = "2.0.16"
toml = "0.9.7"
urlencoding = "2.1.3"
gloo = { version = "0.11.0", features = ["file", "futures"] }
tauri-sys = { git = "https://github.com/opensourcecheemsburgers/tauri-sys", features = ["all"] }
tailwind_fuse = { version = "0.3.2", features = ["variant"] }
tracing-subscriber-wasm = "0.1"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"

phosphor-leptos = "0.8.0"
icondata = "0.6"
icondata_core = "0.1"
leptos_dom = "0.8.5"
leptos_icons = "0.7"

wasm-bindgen = "0.2.103"
wasm-bindgen-test = "0.3.53"

[workspace.dependencies.web-sys]
version = "0.3.80"
features = [
    "Document",
    "Window",
    "Navigator",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "Performance",
    "TextTrack",
    "TextTrackMode",
    "TextTrackList",
    "MouseEvent",
    "PointerEvent",
    "Screen",
    "ScreenOrientation",
    "OrientationLockType",
] 
