[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
console_log.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
phosphor-leptos.workspace = true

# utils
strum.workspace = true
strum_macros.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-subscriber-wasm.workspace = true
dotenv.workspace = true
icondata_core.workspace = true
icondata.workspace = true
tailwind_fuse.workspace = true
leptos_icons.workspace = true

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys.workspace = true
