[package]
name = "gen-key"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
lume-utils = { version = "0.1.0", path = "../../shared/utils" }
rand = "0.9.2"
